<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.isharipov.bakingapp.ui.recipedetail.RecipeDetailStepsFragment">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recipe_steps_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>