<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.isharipov.bakingapp.ui.recipe.RecipeListFragment">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recipe_list_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <android.support.v4.widget.ContentLoadingProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:visibility="visible" />

</LinearLayout>